--- a/platosemana.html
+++ b/platosemana.html
@@ -8,22 +8,22 @@
     <link rel="stylesheet" href="css/style.css"
 
 </head>
-<body><div>
-    <h1>Plato de la semana</h1>
-    <h2>Berenjenas fritas</h2>
-        <p>Comensales: 4 personas <br> Tiempo de preparación: 10 minutos<br> Tiempo de cocción:12 minutos</p>
-        <p2>Ingredientes: 
+<body>
+    <h1>Plato de la semana</h1><div>
+        <h2>Berenjenas fritas</h2>
+            <p>Comensales: 4 personas <br> Tiempo de preparación: 10 minutos<br> Tiempo de cocción:12 minutos</p>
+            <p2>Ingredientes:<pre>
             4 Berenjenas 
             Sal 
             Pimienta 
-            4 cucharadas de harina y aceite</p2>
-        <p3>Preparación: 
+            4 cucharadas de harina y aceite</pre></p2>
+            <p3>Preparación: <pre>
             Lavar las Berenjenas
             Cortarlas en rodajas
             Espolvorearlas con sal
             Dejar que suelten el agua durante 30 minutos
-            Enharizarlas, ponerlas a freir durante 5minutos en aceite bien caliente
-        </p3>
-    </div>
+            Enharizarlas, ponerlas a freir durante 5minutos en aceite bien caliente</pre>
+            </p3></div>
+    
 </body>
 </html>
